@@ -1,3 +1,4 @@
+[ ] Some setting to move also move-sequence points and cam rails points when moving entity.
 [X] Highlight entities that cursor are on. 
 [ ] Make a thing for copy position or scale of other entity.
 [ ] Moving only right or up on selected entity (make arrrows like in every other editor).
